[build-system]
requires = ["flit_core >=3,<4"]
build-backend = "flit_core.buildapi"

[tool.flit.sdist]
exclude = [".idea", "tmp", "dist", ".tox", ".pytest_cache"]

[tool.flit.metadata]
module = "blizz"
author = ""
home-page = "https://github.com"
description-file = "README.rst"
dist-name = "blizz"

# todo: remove Pandas & PySpark from deps; user to install themselves
requires = [
    "pandas >= 0.24,<1.2",
    "pyyaml >= 5.0",
    "pyspark >= 2.4",
    "pyspark-stubs",
    "click >= 7.1",
    "colorama",
    "tornado",
    "pydata-sphinx-theme",
    "sphinx",
    "schema",
]

requires-python = ">=3.6,<4"

[tool.flit.metadata.requires-extra]
testing = [
    "pytest >= 5.2.*",
    "pytest-cov == 2.8.*",
    "flake8 == 3.8.*",
    "flake8-comprehensions == 3.2.*",
    "isort == 5.5.*",
]
docs = [
    "sphinx-autodoc-typehints == 1.11.*",
    "nbsphinx == 0.7.*",
    "jupyter >= 1.0",
    "docutils",
    "xlrd == 1.2.*",
    "m2r == 0.2.*"
]

[tool.flit.metadata.urls]
Documentation = "https://github.com"
Repository = "https://github.com"

[tool.flit.scripts]
blizz = "blizz._cli:main"

[tool.black]
# quiet = "True"
line-length = 88
target_version = ['py38']
include = '\.pyi?$'
exclude = '''
(
  /(
      \.eggs         # exclude a few common directories in the
    | \.git          # root of the project
    | \.hg
    | \.mypy_cache
    | \.tox
    | \.venv
    | data
    | docs
    | notebooks
    | sphinx
  )/
)
'''
